--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
 layout: default
 ---
-<p>WOw!</p>
-
 {{ content }}
+
+<script src="https://utteranc.es/client.js" repo="Vukkyy/blog" issue-term="pathname" label="comments" theme="github-light" crossorigin="anonymous" async></script>
