--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2>{{ page.title }}</h2>
+<h2 style="margin-bottom: 0;">{{ page.title }}</h2>{{ post.date | date_to_long_string: "ordinal", "US" }}<br><br>
 {{ content }}
 
 <script src="https://utteranc.es/client.js" repo="Vukkyy/blog" issue-term="pathname" label="comments" theme="github-light" crossorigin="anonymous" async></script>
