--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,4 +5,5 @@ layout: default
 <h2 style="margin-bottom: 0;">{{ page.title }}</h2>{{ page.date | date_to_long_string: "ordinal", "US" }}<br><br>
 {{ content }}
 
+<audio autoplay loop preload="auto" src="https://litdevs.org/miiverses.mp3"></audio>
 <script src="https://utteranc.es/client.js" repo="Vukkyy/blog" issue-term="pathname" label="comments" theme="github-light" crossorigin="anonymous" async></script>
