--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,4 +6,10 @@ layout: default
 {{ content }}
 
 <audio autoplay loop preload="auto" src="https://litdevs.org/miiverses.mp3"></audio>
-<script src="https://utteranc.es/client.js" repo="Vukkyy/blog" issue-term="pathname" label="comments" theme="github-light" crossorigin="anonymous" async></script>
+<script onload="pleaseworklol()" src="https://utteranc.es/client.js" repo="Vukkyy/blog" issue-term="pathname" label="comments" theme="github-light" crossorigin="anonymous" async></script>
+
+<script>
+  function pleaseworklol() {
+    alert(document.querySelector(".utterances-frame")
+  }
+</script>
