--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,6 @@ layout: default
 
 <script>
   function pleaseworklol() {
-    alert(document.querySelector(".utterances-frame")
+    alert(document.querySelector(".utterances-frame"))
   }
 </script>
