--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,5 +5,10 @@ layout: default
 <h2 style="margin-bottom: 0;">{{ page.title }}</h2>{{ page.date | date_to_long_string: "ordinal", "US" }}<br><br>
 {{ content }}
 
+{% if page.music %} 
+<audio autoplay loop preload="auto" src="{{ page.music }}"></audio>
+{% else %}
 <audio autoplay loop preload="auto" src="https://litdevs.org/tvii.mp3"></audio>
-<script onload="pleaseworklol()" src="https://utteranc.es/client.js" repo="Vukkyy/blog" issue-term="pathname" label="comments" theme="github-light" crossorigin="anonymous" async></script>
+{% endif %}
+
+<script src="https://utteranc.es/client.js" repo="Vukkyy/blog" issue-term="pathname" label="comments" theme="github-light" crossorigin="anonymous" async></script>
