--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2 style="margin-bottom: 0;">{{ page.title }}</h2>{{ page.date | date_to_long_string: "ordinal", "US" }}<br><br>
+<h2 style="margin-bottom: 0;">{{ page.title }}</h2>{{ page.date | date_to_long_string: "ordinal", "US" }} <a href="{% if page.music %}{{ page.music }}{% else %}https://litdevs.org/tvii.mp3{% endif %}">🎵</a><br><br>
 {{ content }}
 
 {% if page.music %} 
