--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,10 @@
       <header>
         <h1>{{ page.htitle | default: site.title }}</h1>
         <p>{{ page.hdesc | default: site.description }}</p>
+        <p class="view"><a href="/">View all posts</a></p>
+        <ul>
+          <li><a href="/">View All <strong>Posts</strong></a></li>
+        </ul>
       </header>
       <section>
 
