--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 <h2 style="margin-bottom: 0;">{{ page.title }}</h2>{{ page.date | date_to_long_string: "ordinal", "US" }} <a title="Download this post's song" href="{% if page.music %}{{ page.music }}{% else %}https://litdevs.org/tvii.mp3{% endif %}">🎵</a><br><br>
 {{ content }}
 
+<!-- SWITCH TO WEBAMP IF YOU EVER FIGURE OUT HOW TO GO ABOUT IT! -->
 {% if page.music %} 
 <audio autoplay loop preload="auto" src="{{ page.music }}"></audio>
 {% else %}
